force-app/solution/03_DataModel/objects/Opportunity/fields/AmountAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>AmountAfterDiscount__c</fullName>
    <label>Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>