force-app/solution/03_DataModel/objects/Opportunity/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <label>Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>