force-app/solution/03_DataModel/objects/Opportunity/fields/VehicleBrand__c.field-meta.xml
<CustomField>
    <fullName>VehicleBrand__c</fullName>
    <label>Vehicle Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>