force-app/solution/03_DataModel/objects/Opportunity/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>Vehicle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>