force-app/solution/03_DataModel/objects/Opportunity/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>